# needledrop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: spike_stream.py
src/needledrop/: app.py  capture.py  cli.py  config.py  detect.py  devices.py  encode.py  ringbuf.py  sonos.py  state.py  stream.py  units.py  web.py
src/needledrop/static/: index.html
tests/: fakes.py  test_app.py  test_capture.py  test_cli.py  test_config.py  test_detect.py  test_devices.py  test_encode.py  test_sonos.py  test_state.py  test_stream.py  test_units.py  test_version.py  test_web.py
